@@ -38,19 +38,23 @@ function retval = ishold (h)
     fig = gcf ();
     ax = get (fig, "currentaxes");
   else
-    if (ishandle (h))
-      if (strcmp (get (h, "type"), "figure"))
-        fig = h;
-        ax = get (fig, "currentaxes");
-      elseif (strcmp (get (h, "type"), "axes"))
-        ax = h;
-        fig = ancestor (ax, "figure");
-      else
-        error ("ishold: H must be an axes or figure graphics handle");
-      endif
-    else
+    if (! ishandle (h))
       error ("ishold: H must be an axes or figure graphics handle");
     endif
+
+    switch (get (h, "type"))
+      case "figure"
+        fig = h;
+        ax = get (fig, "currentaxes");
+
+      case "axes"
+        ax = h;
+        fig = ancestor (ax, "figure");
+
+      otherwise
+        error ("ishold: H must be an axes or figure graphics handle");
+
+    endswitch
   endif
 
   retval = (strcmp (get (fig, "nextplot"), "add")
