@@ -152,16 +152,6 @@ function hax = newplot (hsave = [])
     deleteall = false;
   endif
 
-  ## FIXME: Is this necessary anymore?
-  ##        It seems like a kluge that belongs somewhere else.
-  if (strcmp (get (ca, "__hold_all__"), "off"))
-    __next_line_color__ (true);
-    __next_line_style__ (true);
-  else
-    __next_line_color__ (false);
-    __next_line_style__ (false);
-  endif
-
   anp = get (ca, "nextplot");
   switch (anp)
     case "add"
@@ -212,6 +202,11 @@ function hax = newplot (hsave = [])
       ## For the time being, in order to have axis labels and title work,
       ## the above code is is required.
   endswitch
+
+  ## Reset line and color styles when hold is not on 
+  if (! strcmp (anp, "add"))
+    set (ca, "colororderindex", 1, "linestyleorderindex", 1);
+  endif
 
   if (nargout > 0)
     hax = ca;
